--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-;lib_deps = FreeRTOS
-;src_dir = src
-;src_filter = +main.pp + accelerometer.cpp + audio.cpp + distance.cpp + neopixel.cpp
+lib_deps = 
+	adafruit/Adafruit NeoPixel@^1.12.0
+	earlephilhower/ESP8266Audio@^1.9.7
+	adafruit/Adafruit LIS3DH@^1.2.6
