Ultrasound to turn LED on and off

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,12 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+monitor_port = COM3
+monitor_speed = 115200
 ;lib_deps = FreeRTOS
-;src_dir = src
-;src_filter = +main.pp + accelerometer.cpp + audio.cpp + distance.cpp + neopixel.cpp
+;src_filter = 
+ ;   src/main.cpp
+ ;   src/distance.cpp
+  ;  src/audio.cpp
+   ; src/accelerometer.cpp
+    ;src/neopixel.cpp
