--- a/platformio.ini
+++ b/platformio.ini
@@ -18,4 +18,5 @@ lib_deps =
 	adafruit/Adafruit NeoPixel@^1.12.0
 	earlephilhower/ESP8266Audio@^1.9.7
 	adafruit/Adafruit LIS3DH@^1.2.6
-
+	adafruit/Adafruit BusIO@^1.14.5
+	adafruit/Adafruit Unified Sensor@^1.1.14
