--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,6 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-;lib_deps = FreeRTOS
-;src_dir = src
-;src_filter = +main.pp + accelerometer.cpp + audio.cpp + distance.cpp + neopixel.cpp
+monitor_port = COM3
+monitor_speed = 115200
+lib_deps = adafruit/Adafruit LIS3DH@^1.2.6
