--- a/platformio.ini
+++ b/platformio.ini
@@ -20,3 +20,4 @@ lib_deps =
 	adafruit/Adafruit LIS3DH@^1.2.6
 	adafruit/Adafruit BusIO@^1.14.5
 	adafruit/Adafruit Unified Sensor@^1.1.14
+	sparkfun/SparkFun LIS3DH Arduino Library@^1.0.3
