--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,9 +1,9 @@
 // AUTOMATICALLY GENERATED FILE. PLEASE DO NOT MODIFY IT MANUALLY
 //
-// PIO Unified Debugger
+// PlatformIO Debugging Solution
 //
-// Documentation: https://docs.platformio.org/page/plus/debugging.html
-// Configuration: https://docs.platformio.org/page/projectconf/section_env_debug.html
+// Documentation: https://docs.platformio.org/en/latest/plus/debugging.html
+// Configuration: https://docs.platformio.org/en/latest/projectconf/sections/env/options/debug/index.html
 
 {
     "version": "0.2.0",
@@ -12,7 +12,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "C:/Users/schwe/OneDrive/Dokumente/PlatformIO/Projects/Staff_Project/.pio/build/esp32dev/firmware.elf",
+            "executable": "C:/Users/schwe/OneDrive/Dokumente/PlatformIO/Projects/Staff_Project_neu/Staff_Project/.pio/build/esp32dev/firmware.elf",
             "projectEnvName": "esp32dev",
             "toolchainBinDir": "C:/Users/schwe/.platformio/packages/toolchain-xtensa-esp32@8.4.0+2021r2-patch5/bin",
             "internalConsoleOptions": "openOnSessionStart",
@@ -25,7 +25,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "C:/Users/schwe/OneDrive/Dokumente/PlatformIO/Projects/Staff_Project/.pio/build/esp32dev/firmware.elf",
+            "executable": "C:/Users/schwe/OneDrive/Dokumente/PlatformIO/Projects/Staff_Project_neu/Staff_Project/.pio/build/esp32dev/firmware.elf",
             "projectEnvName": "esp32dev",
             "toolchainBinDir": "C:/Users/schwe/.platformio/packages/toolchain-xtensa-esp32@8.4.0+2021r2-patch5/bin",
             "internalConsoleOptions": "openOnSessionStart"
@@ -34,7 +34,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "C:/Users/schwe/OneDrive/Dokumente/PlatformIO/Projects/Staff_Project/.pio/build/esp32dev/firmware.elf",
+            "executable": "C:/Users/schwe/OneDrive/Dokumente/PlatformIO/Projects/Staff_Project_neu/Staff_Project/.pio/build/esp32dev/firmware.elf",
             "projectEnvName": "esp32dev",
             "toolchainBinDir": "C:/Users/schwe/.platformio/packages/toolchain-xtensa-esp32@8.4.0+2021r2-patch5/bin",
             "internalConsoleOptions": "openOnSessionStart",
