--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "C_Cpp.errorSquiggles": "disabled"
+    "C_Cpp.errorSquiggles": "disabled",
+    "cmake.sourceDirectory": "C:/Users/schwe/OneDrive/Dokumente/PlatformIO/Projects/Staff_Project_neu/Staff_Project/lib/ESP32-A2DP"
 }
